--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,10 @@ body {
     #mainvid {
         margin-top: 3rem;
     }
+
+    #picDiv {
+        margin-top: 60px !important;
+    }
 }
 
 
@@ -38,13 +42,10 @@ body {
         position: fixed !important;
         padding-top: 40px !important;
         padding-bottom: 10px !important;
+        padding-left: 0px !important;
         -webkit-box-shadow: 0px 8px 7px -2px rgba(0, 0, 0, 0.13);
         -moz-box-shadow: 0px 8px 7px -2px rgba(0, 0, 0, 0.13);
         box-shadow: 0px 8px 7px -2px rgba(0, 0, 0, 0.13);
-    }
-
-    #picDiv {
-        margin-top: 60px !important;
     }
 
     #mynav div {
@@ -76,6 +77,7 @@ body {
     animation-delay: 1.2s;
     padding-top: 10vh;
     margin-top: 200px;
+    /* margin-right: 7vw; */
     padding-left: 20px;
     font-family: 'Merriweather', serif !important;
     font-weight: 700;
