--- a/css/main.css
+++ b/css/main.css
@@ -30,22 +30,17 @@ body {
     #picDiv {
         margin-top: 60px !important;
     }
-}
 
-
-/* Main Page Screen Size Changes, MD */
-
-@media only screen and (max-width: 768px) {
     #mynav {
-        background-color: #F3F3F0 !important;
+        background-color: rgba(243, 243, 240, 0.9) !important;
         margin-top: 0px !important;
         position: fixed !important;
         padding-top: 40px !important;
         padding-bottom: 10px !important;
         padding-left: 0px !important;
-        -webkit-box-shadow: 0px 8px 7px -2px rgba(0, 0, 0, 0.13);
-        -moz-box-shadow: 0px 8px 7px -2px rgba(0, 0, 0, 0.13);
-        box-shadow: 0px 8px 7px -2px rgba(0, 0, 0, 0.13);
+        -webkit-box-shadow: 0px 8px 7px -2px rgba(0, 0, 0, 0.1);
+        -moz-box-shadow: 0px 8px 7px -2px rgba(0, 0, 0, 0.1);
+        box-shadow: 0px 8px 7px -2px rgba(0, 0, 0, 0.1);
     }
 
     #mynav div {
@@ -72,6 +67,11 @@ body {
         padding-right: 0px !important;
     }
 }
+
+
+/* Main Page Screen Size Changes, MD */
+
+@media only screen and (max-width: 768px) {}
 
 #mynav {
     animation-delay: 1.2s;
