remove aos of first work tile

--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,7 @@ body {
     box-shadow: 6px 6px 11px -4px rgba(0, 0, 0, 0.54);
 }
 
-#work-tiles {
+#first-work-tile {
     animation-delay: 1.2s;
 }
 
