--- a/css/main.css
+++ b/css/main.css
@@ -79,7 +79,15 @@ body {
 
 /* Main Page Screen Size Changes, MD */
 
-@media only screen and (max-width: 768px) {}
+@media only screen and (max-width: 768px) {
+    #work-tiles .col-lg-4 {
+        padding: 0px 20px !important;
+    }
+
+    #work-tiles .col-lg-5 {
+        margin-top: 30px;
+    }
+}
 
 #mynav {
     animation-delay: 1.2s;
@@ -108,6 +116,7 @@ body {
 }
 
 #mynav ul {
+    min-width: 20px;
     list-style-type: none;
 }
 
@@ -167,7 +176,7 @@ body {
 }
 
 #work-tiles .col-lg-5 {
-    max-width: 420px;
+    /* max-width: 420px; */
     min-height: 350px;
 }
 
