--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,15 @@ body {
     background-color: #F3F3F0;
 }
 
+.transition-fade {
+    transition: 0.4s;
+    opacity: 1;
+}
+
+html.is-animating .transition-fade {
+    opacity: 0;
+}
+
 /* Main Page Screen Size Changes, LG */
 
 @media only screen and (max-width: 991px) {
@@ -211,7 +220,7 @@ body {
 }
 
 #footer {
-    margin-bottom: 150px;
+    margin-bottom: 20px;
     padding-right: 120px;
 }
 
