--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ body {
 
     #picDiv {
         margin-top: 60px !important;
-        text-align: center;
+        text-align: center !important;
     }
 
     #mynav {
@@ -39,9 +39,9 @@ body {
         padding-top: 40px !important;
         padding-bottom: 10px !important;
         padding-left: 0px !important;
-        -webkit-box-shadow: 0px 8px 7px -2px rgba(0, 0, 0, 0.008);
+        /* -webkit-box-shadow: 0px 8px 7px -2px rgba(0, 0, 0, 0.008);
         -moz-box-shadow: 0px 8px 7px -2px rgba(0, 0, 0, 0.08);
-        box-shadow: 0px 8px 7px -2px rgba(0, 0, 0, 0.08);
+        box-shadow: 0px 8px 7px -2px rgba(0, 0, 0, 0.08); */
     }
 
     #mynav ul {
