about me page progress

--- a/css/main.css
+++ b/css/main.css
@@ -272,6 +272,10 @@ body {
     margin-top: 3em !important;
 }
 
+.mt-3_5 {
+    margin-top: 5em !important;
+}
+
 .mt-5 {
     margin-top: 7em !important;
 }
