--- a/css/main.css
+++ b/css/main.css
@@ -298,6 +298,12 @@ b {
     box-shadow: 7px 3px 19px -6px rgba(0, 0, 0, 0.68);
 }
 
+.lightshadow {
+    -webkit-box-shadow: 7px 3px 19px -6px rgba(0, 0, 0, 0.30);
+    -moz-box-shadow: 7px 3px 19px -6px rgba(0, 0, 0, 0.30);
+    box-shadow: 7px 3px 19px -6px rgba(0, 0, 0, 0.30);
+}
+
 .caption {
     font-size: 0.8em;
     color: rgb(85, 85, 85);
